폰트명 수정, 투두 화면 수정

--- a/app/src/main/res/values/font_style.xml
+++ b/app/src/main/res/values/font_style.xml
@@ -2,15 +2,15 @@
 <resources>
 
     <style name="customButtonFontStyle" parent="@style/Widget.AppCompat.Button">
-        <item name="android:fontFamily">@font/the하루일기</item>
+        <item name="android:fontFamily">@font/the</item>
     </style>
 
     <style name="customTextViewFontStyle" parent="@style/Widget.AppCompat.TextView">
-        <item name="android:fontFamily">@font/the하루일기</item>
+        <item name="android:fontFamily">@font/the</item>
     </style>
 
     <style name="customEditTextFontStyle" parent="@style/Widget.AppCompat.EditText">
-        <item name="android:fontFamily">@font/the하루일기</item>
+        <item name="android:fontFamily">@font/the</item>
     </style>
 
 </resources>
