--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,7 +110,7 @@
         android:id="@+id/to_do"
         android:layout_width="wrap_content"
         android:layout_height="100dp"
-        android:text="오늘의 추천 To_do"
+        android:text="추천 To_do"
         android:layout_marginBottom="-180dp"
         android:textSize="30dp"
         android:textColor="#000000"
